--- a/jdbc_test/pom.xml
+++ b/jdbc_test/pom.xml
@@ -11,7 +11,10 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <sonar.organization>veabinboben</sonar.organization>
     </properties>
+
+    
 
     <dependencies>
     
@@ -21,6 +24,7 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.7</version>
         </dependency>
+        
 
     </dependencies>
 </project>
