--- a/bookstoreserver/pom.xml
+++ b/bookstoreserver/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>veabinboben</sonar.organization>
 	</properties>
 	<dependencies>
 		<dependency>
