feat(spring): image uploading and viewing

--- a/bookstoreserver/src/main/resources/application.properties
+++ b/bookstoreserver/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+app.file.upload-dir=D:/Projects/Java/javabookstore/upload/
