feat(spring): added user create method

--- a/bookstoreserver/src/main/resources/application.properties
+++ b/bookstoreserver/src/main/resources/application.properties
@@ -5,4 +5,8 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
 app.file.upload-dir=D:/Projects/Java/javabookstore/upload/
